--- a/css/styles.css
+++ b/css/styles.css
@@ -8,6 +8,7 @@
   --light-color: #f4f4fd;
   --pure-white: white;
   --order-active: #404bbf;
+  --basic-svg: #afb1b8;
 }
 
 body {
@@ -163,6 +164,11 @@ ol {
 .order {
   padding: 192px 0;
   text-align: center;
+  background-image: linear-gradient(rgba(47, 48, 58, 0.7), rgba(47, 48, 58, 0.7)),
+    url('../images/people-office.jpg');
+  background-size: cover;
+  max-width: 1440px;
+  margin: 0 auto;
 }
 
 .order h1 {
@@ -199,6 +205,7 @@ ol {
 
 .order-button:active {
   background: var(--order-active);
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
 }
 
 .visually-hidden {
@@ -313,6 +320,11 @@ ol {
   border-radius: 50%;
 }
 
+.card-info a:hover,
+.card-info a:focus {
+  background-color: var(--success-color);
+}
+
 .worker-position {
   line-height: 1.5;
   margin-bottom: 8px;
@@ -333,7 +345,7 @@ ol {
 }
 
 .buttons:hover {
-  background: var(--primary-brand-color);
+  background-color: var(--primary-brand-color);
   box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 2px 1px rgba(0, 0, 0, 0.08),
     0px 2px 2px rgba(0, 0, 0, 0.12);
   color: var(--pure-white);
@@ -354,7 +366,7 @@ ol {
   column-gap: 24px;
 }
 
-.cards > li {
+.cards > li:hover {
   width: 360px;
   box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08);
 }
@@ -402,6 +414,15 @@ ol {
   border-radius: 4px;
 }
 
+.customers-svg {
+  fill: var(--basic-svg);
+}
+
+.customers-svg:hover,
+.customers-svg:focus {
+  fill: var(--primary-brand-color);
+}
+
 .footer {
   background-color: var(--dark-color);
   padding: 100px 0;
@@ -432,6 +453,11 @@ ol {
   text-decoration: none;
   background-color: rgba(255, 255, 255, 0.1);
   border-radius: 50%;
+}
+
+.footer-socials a:hover,
+.footer-socials a:focus {
+  background-color: var(--success-color);
 }
 
 .socials-header {
