--- a/css/styles.css
+++ b/css/styles.css
@@ -369,6 +369,10 @@ ol {
   column-gap: 24px;
 }
 
+.cards li {
+  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08);
+}
+
 .card-link {
   display: block;
   text-decoration: none;
@@ -376,13 +380,14 @@ ol {
 
 .card-link:hover,
 .card-link:focus {
-  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08);
+  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16),
+    0px 2px 1px rgba(46, 47, 66, 0.08);
 }
 
 .description {
   padding: 32px 16px;
   border: 0.5px solid #f4f4fd;
-  border: 0;
+  border-top: 0;
 }
 
 .description p {
